updated projects - images and text now align correctly

--- a/elisovskis-phase1/css/home.css
+++ b/elisovskis-phase1/css/home.css
@@ -157,6 +157,10 @@ button:hover {
     grid-row-end: 2;
 }
 
+.grid-box-links a {
+    text-align: center;
+}
+
 .nav-right {
     display: inline;
     float: right;
